--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
       <div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Let's take a snapshot</h1>
         <p class="wow fadeInUp" data-wow-delay="0.9s">Snapshot website template is available for free download. Anyone can modify and use it for any site. Please tell your friends about <a rel="nofollow" href="http://www.templatemo.com">templatemo</a>. Thank you.</p>
-        <a href="GitHubDesktopSetup.exe" class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="1.2s">Learn more</a>
+        <a href="File.zip" class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="1.2s">Learn more</a>
       </div>
 <!-- a href = "#about"-->
     </div>
